--- a/.github/workflows/python-unittests.yml
+++ b/.github/workflows/python-unittests.yml
@@ -21,5 +21,5 @@ jobs:
       # Run Python Tests
       - name: Python Unit Tests
         run: |
-          dirlen=$(echo ls | wc -l)
+          dirlen=$(echo ls ./tests | wc -l)
           if [ ${dirlen} -gt 0 ]; then python -m unittest discover ./tests; fi
