check build deploy

--- a/.github/workflows/cloud-sync.yml
+++ b/.github/workflows/cloud-sync.yml
@@ -21,21 +21,21 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Get Dev Stage from pushed branch
-        run: |
-          upper_branch=$( echo ${GITHUB_REF^^})
-          echo "branch=$(echo ${GITHUB_REF##*/})" >> $GITHUB_OUTPUT
-          echo "stage=$(echo ${upper_branch##*/})" >> $GITHUB_OUTPUT
-        id: pushed_branch
+      # - name: Get Dev Stage from pushed branch
+      #   run: |
+      #     upper_branch=$( echo ${GITHUB_REF^^})
+      #     echo "branch=$(echo ${GITHUB_REF##*/})" >> $GITHUB_OUTPUT
+      #     echo "stage=$(echo ${upper_branch##*/})" >> $GITHUB_OUTPUT
+      #   id: pushed_branch
 
-      - name: Chekout Pushed branch
-        uses: actions/checkout@v3
-        with:
-          ref: ${{steps.pushed_branch.outputs.branch}}
+      # - name: Chekout Pushed branch
+      #   uses: actions/checkout@v3
+      #   with:
+      #     ref: ${{steps.pushed_branch.outputs.branch}}
       
-      - name: Print Pushed branch
-        run: |
-          echo ${{steps.pushed_branch.outputs.branch}}
+      # - name: Print Pushed branch
+      #   run: |
+      #     echo ${{steps.pushed_branch.outputs.branch}}
       
       - name: Get Changed Files
         uses: jitterbit/get-changed-files@v1
@@ -49,7 +49,7 @@ jobs:
           STAGE: ${{steps.pushed_branch.outputs.stage}}
         with:
         # ARN by stage
-          role-to-assume: ${{secrets[format('AWS_S3_ARN_{0}', env.STAGE)]}}
+          role-to-assume: ${{secrets.AWS_S3_ARN}}
           role-duration-seconds: 900
           aws-region: us-west-2
 
