--- a/.github/workflows/python-unittests.yml
+++ b/.github/workflows/python-unittests.yml
@@ -12,8 +12,8 @@ jobs:
         python-version: [3.8, 3.9, 3.10, 3.11] # pandas not below 3.8
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Main
-        uses: actions/checkout@v2
+      # - name: Checkout Main
+      #   uses: actions/checkout@v2
       # Load master requirements.txt
       - name: Load master requirements
         run: |
